--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
-
+title: Anthony Sutton # your name (or website title) here
+#logo: "/images/profile_pic.png?raw=true" # your photo (or logo) here
+logo: "/images/profile_picture.png" # your photo (or logo) here
+description: <a href="https://www.linkedin.com/in/anthony-sutton-5a415a28/">View LinkedIn Profile </a> 
+# your text below (remove <br> elements if you don't need line breaks)
+#<a href="https://casagroupproject.github.io/">CASA Group Project Coursework Site</a> 
+theme: jekyll-theme-minimal
+google_analytics: UA-000000-0 # your Google Analytics tracking ID here
